--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
             1. PyToExe Build 230804 v1.0.0
             <br>
             2. PyToExe Build 230813 v1.1.0
+            <br>
+            3. PyToExe Build 230815 v1.2.0
             <br><br>
             软件源码下载:
             <a href="https://github.com/Lonely-Pea/PyToExe.git">点击进入github下载源码(最新版本)</a>
@@ -27,11 +29,15 @@
             <br><br>
             <a href="https://wwcs.lanzouy.com/iAy9f15ajtsd">点击下载PyToExe Build 230813 v1.1.0源码</a>
             <br><br>
+            <a href="https://wwcs.lanzouy.com/iH90515hc67e">点击下载PyToExe Build 230815 v1.2.0源码</a>
+            <br><br>
             软件exe程序下载(适用于Windows平台):
             <br>
             1. PyToExe Build 230804： <a href="https://wwcs.lanzouy.com/ib5RM14rzs9a">点击下载</a>
             <br><br>
             2. PyToExe Build 230813： <a href="https://wwcs.lanzouy.com/iInhb15ajusj">点击下载</a>
+            <br><br>
+            3. PyToExe Build 230815： <a href="https://wwcs.lanzouy.com/iAAgj15hc9di">点击下载</a>
             <br>
         </p>
     </div>
@@ -68,7 +74,17 @@
             <br>
             （小版本更新）
             <br><br>
-            更新中！敬请期待！(目前最新版本:<a href="update.html">v1.2.0</a>)
+            3.PyToExe Build 230815 v1.2.0
+            <br>
+            相较于v1.1.0新增：
+            <br>
+            1.修复了左下角帮助信息的部分bug
+            <br>
+            2.新增了检查更新界面
+            <br>
+            3.修改了安装pyinstaller和nuitka和打包程序为后台静默运行
+            <br><br>
+            更新中！敬请期待！
             <br>
         </p>
     </div>
